--- a/mvp/app/templates/index.html
+++ b/mvp/app/templates/index.html
@@ -1,39 +1,24 @@
 {% extends "base.html" %}
 
+{% block scripts %}
+    {{ super() }}
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.css">
+    <script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
+    <script type="text/javascript">$(document).ready(function(){
+        $('table').DataTable({
+            "pageLength": 10
+        });
+    });</script>
+{% endblock %}
+
 {% block app_content %}
-    <h1>Hi, {{ current_user.username}}!</h1>
-    {% if form %}
-    <form action="" method="post">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.post.label }}<br>
-            {{ form.post(cols=32, rows=4) }}<br>
-            {% for error in form.post.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.submit() }}</p>
-    </form>
-    {% endif %}
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 
-
-    {% for post in posts %}
-        {% include '_post.html' %}
-    {% endfor %}
-    
-    <nav aria-label="...">
-        <ul class="pager">
-            <li class="previous{% if not prev_url %} disabled{% endif %}">
-                <a href="{{ prev_url or '#' }}">
-                    <span aria-hidden="true">&larr;</span> Newer posts
-                </a>
-            </li>
-            <li class="next{% if not next_url %} disabled{% endif %}">
-                <a href="{{ next_url or '#' }}">
-                    Older posts <span aria-hidden="true">&rarr;</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
+<div>
+    <h1>Tabela de Vinhos</h1>
+    {{ df.to_html(index=False, render_links=True)|safe }}
+</div>
 {% endblock %}
  
