--- a/mvp/app/templates/tables.html
+++ b/mvp/app/templates/tables.html
@@ -5,6 +5,6 @@
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
     <div>
         <h1>Tabela de Vinhos</h1>
-        {{ df.to_html()|safe }}
+        {{ df.to_html(index=False, render_links=True)|safe }}
     </div>
 {% endblock %}
