implantacao dos campos de uva e classificacao

--- a/mvp/app/templates/index.html
+++ b/mvp/app/templates/index.html
@@ -24,6 +24,7 @@
             <li>Nota do <a href="https://www.vivino.com">Vivino</a> acima da média para vinhos até R$ 200,00.</li>
             <li>Mais de 200 avaliações no <a href="https://www.vivino.com">Vivino</a></li>
         </ul>
+        <p>Para mais informações clique em <a href="/dashapp" class="dash-link">Explorar</a></p>
 
         {{ df.to_html(index=False, render_links=False, classes='best_deals_datatable', table_id='best_deals_datatable')|safe }}
     </div>
