--- a/mvp/app/templates/_navbar.html
+++ b/mvp/app/templates/_navbar.html
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('main.index') }}">Home</a></li>
-                <li><a href="/dashapp" class="dash-link">Explore</a></li>
+                <li><a href="/dashapp" class="dash-link">Explorar</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_anonymous %}
